crates/tests/tools/header2rdl/tests/include/um/InteractionContext.h

typedef enum INTERACTION_ID
{
    INTERACTION_ID_NONE           = 0x00000000,
    INTERACTION_ID_MANIPULATION   = 0x00000001,
    INTERACTION_ID_TAP            = 0x00000002,
    INTERACTION_ID_SECONDARY_TAP  = 0x00000003,
    INTERACTION_ID_HOLD           = 0x00000004,
    INTERACTION_ID_DRAG           = 0x00000005,
    INTERACTION_ID_CROSS_SLIDE    = 0x00000006,
    INTERACTION_ID_MAX            = 0xffffffff
} INTERACTION_ID;
typedef enum INTERACTION_FLAGS
{
    INTERACTION_FLAG_NONE    = 0x00000000,
    INTERACTION_FLAG_BEGIN   = 0x00000001,
    INTERACTION_FLAG_END     = 0x00000002,
    INTERACTION_FLAG_CANCEL  = 0x00000004,
    INTERACTION_FLAG_INERTIA = 0x00000008,
    INTERACTION_FLAG_MAX     = 0xffffffff
} INTERACTION_FLAGS;
typedef enum INTERACTION_STATE
{
    INTERACTION_STATE_IDLE                = 0x00000000,
    INTERACTION_STATE_IN_INTERACTION      = 0x00000001,
    INTERACTION_STATE_POSSIBLE_DOUBLE_TAP = 0x00000002,
    INTERACTION_STATE_MAX                 = 0xffffffff
} INTERACTION_STATE;
typedef enum INTERACTION_CONTEXT_PROPERTY
{
    INTERACTION_CONTEXT_PROPERTY_MEASUREMENT_UNITS       = 0x00000001,
    INTERACTION_CONTEXT_PROPERTY_INTERACTION_UI_FEEDBACK = 0x00000002,
    INTERACTION_CONTEXT_PROPERTY_FILTER_POINTERS         = 0x00000003,

    INTERACTION_CONTEXT_PROPERTY_MAX                     = 0xffffffff
} INTERACTION_CONTEXT_PROPERTY;
typedef enum CROSS_SLIDE_FLAGS
{
    CROSS_SLIDE_FLAGS_NONE              = 0x00000000,
    CROSS_SLIDE_FLAGS_SELECT            = 0x00000001,
    CROSS_SLIDE_FLAGS_SPEED_BUMP        = 0x00000002,
    CROSS_SLIDE_FLAGS_REARRANGE         = 0x00000004,
    CROSS_SLIDE_FLAGS_MAX               = 0xffffffff
} CROSS_SLIDE_FLAGS;
typedef enum MOUSE_WHEEL_PARAMETER
{
    MOUSE_WHEEL_PARAMETER_CHAR_TRANSLATION_X    = 0x00000001,
    MOUSE_WHEEL_PARAMETER_CHAR_TRANSLATION_Y    = 0x00000002,
    MOUSE_WHEEL_PARAMETER_DELTA_SCALE           = 0x00000003,
    MOUSE_WHEEL_PARAMETER_DELTA_ROTATION        = 0x00000004,
    MOUSE_WHEEL_PARAMETER_PAGE_TRANSLATION_X    = 0x00000005,
    MOUSE_WHEEL_PARAMETER_PAGE_TRANSLATION_Y    = 0x00000006,
    MOUSE_WHEEL_PARAMETER_MAX                   = 0xffffffff
} MOUSE_WHEEL_PARAMETER;
typedef enum TAP_PARAMETER
{
    TAP_PARAMETER_MIN_CONTACT_COUNT      = 0x00000000,
    TAP_PARAMETER_MAX_CONTACT_COUNT      = 0x00000001,
    TAP_PARAMETER_MAX                    = 0xffffffff
} TAP_PARAMETER;
typedef enum TRANSLATION_PARAMETER
{
    TRANSLATION_PARAMETER_MIN_CONTACT_COUNT = 0x00000000,
    TRANSLATION_PARAMETER_MAX_CONTACT_COUNT = 0x00000001,
    TRANSLATION_PARAMETER_MAX               = 0xffffffff
} TRANSLATION_PARAMETER;
typedef enum MANIPULATION_RAILS_STATE
{
    MANIPULATION_RAILS_STATE_UNDECIDED = 0x00000000,
    MANIPULATION_RAILS_STATE_FREE      = 0x00000001,
    MANIPULATION_RAILS_STATE_RAILED    = 0x00000002,
    MANIPULATION_RAILS_STATE_MAX       = 0xffffffff
} MANIPULATION_RAILS_STATE;
typedef struct MANIPULATION_TRANSFORM
{
    float translationX;
    float translationY;
    float scale;
    float expansion;
    float rotation;
} MANIPULATION_TRANSFORM;
typedef struct MANIPULATION_VELOCITY
{
    float velocityX;
    float velocityY;
    float velocityExpansion;
    float velocityAngular;
} MANIPULATION_VELOCITY;
typedef struct INTERACTION_ARGUMENTS_MANIPULATION
{
    MANIPULATION_TRANSFORM   delta;
    MANIPULATION_TRANSFORM   cumulative;
    MANIPULATION_VELOCITY    velocity;
    MANIPULATION_RAILS_STATE railsState;
} INTERACTION_ARGUMENTS_MANIPULATION;
typedef struct INTERACTION_ARGUMENTS_TAP
{
    UINT32 count;
} INTERACTION_ARGUMENTS_TAP;
typedef struct INTERACTION_ARGUMENTS_CROSS_SLIDE
{
    CROSS_SLIDE_FLAGS flags;
} INTERACTION_ARGUMENTS_CROSS_SLIDE;
typedef struct INTERACTION_CONTEXT_OUTPUT
{
    INTERACTION_ID     interactionId;
    INTERACTION_FLAGS  interactionFlags;
    POINTER_INPUT_TYPE inputType;
    float              x;
    float              y;
    union
    {
        INTERACTION_ARGUMENTS_MANIPULATION   manipulation;
        INTERACTION_ARGUMENTS_TAP            tap;
        INTERACTION_ARGUMENTS_CROSS_SLIDE    crossSlide;
    } arguments;
} INTERACTION_CONTEXT_OUTPUT;
typedef struct INTERACTION_CONTEXT_OUTPUT2
{
    INTERACTION_ID     interactionId;
    INTERACTION_FLAGS  interactionFlags;
    POINTER_INPUT_TYPE inputType;
    UINT32             contactCount;
    UINT32             currentContactCount;
    float              x;
    float              y;
    union
    {
        INTERACTION_ARGUMENTS_MANIPULATION   manipulation;
        INTERACTION_ARGUMENTS_TAP            tap;
        INTERACTION_ARGUMENTS_CROSS_SLIDE    crossSlide;
    } arguments;
} INTERACTION_CONTEXT_OUTPUT2;
 


typedef void (CALLBACK *INTERACTION_CONTEXT_OUTPUT_CALLBACK) (
    _In_opt_ void *clientData,
    _In_reads_(1) const INTERACTION_CONTEXT_OUTPUT *output);
typedef void (CALLBACK *INTERACTION_CONTEXT_OUTPUT_CALLBACK2) (
    _In_opt_ void *clientData,
    _In_reads_(1) const INTERACTION_CONTEXT_OUTPUT2 *output);