crates/deps/sys/src/Windows/Win32/UI/InteractionContext/mod.rs

#[repr(C)]
#[cfg(feature = "Win32_UI_WindowsAndMessaging")]
pub struct INTERACTION_CONTEXT_OUTPUT2 {
    pub interactionId: INTERACTION_ID,
    pub interactionFlags: INTERACTION_FLAGS,
    pub inputType: super::WindowsAndMessaging::POINTER_INPUT_TYPE,
    pub contactCount: u32,
    pub currentContactCount: u32,
    pub x: f32,
    pub y: f32,
    pub arguments: INTERACTION_CONTEXT_OUTPUT2_0,
}
#[cfg(feature = "Win32_UI_WindowsAndMessaging")]
impl ::core::marker::Copy for INTERACTION_CONTEXT_OUTPUT2 {}
#[cfg(feature = "Win32_UI_WindowsAndMessaging")]
impl ::core::clone::Clone for INTERACTION_CONTEXT_OUTPUT2 {
    fn clone(&self) -> Self {
        *self
    }
}
#[repr(C)]
#[cfg(feature = "Win32_UI_WindowsAndMessaging")]
pub union INTERACTION_CONTEXT_OUTPUT2_0 {
    pub manipulation: INTERACTION_ARGUMENTS_MANIPULATION,
    pub tap: INTERACTION_ARGUMENTS_TAP,
    pub crossSlide: INTERACTION_ARGUMENTS_CROSS_SLIDE,
}
#[cfg(feature = "Win32_UI_WindowsAndMessaging")]
impl ::core::marker::Copy for INTERACTION_CONTEXT_OUTPUT2_0 {}
#[cfg(feature = "Win32_UI_WindowsAndMessaging")]
impl ::core::clone::Clone for INTERACTION_CONTEXT_OUTPUT2_0 {
    fn clone(&self) -> Self {
        *self
    }
}
#[cfg(feature = "Win32_UI_WindowsAndMessaging")]
pub type INTERACTION_CONTEXT_OUTPUT_CALLBACK = unsafe extern "system" fn(clientdata: *const ::core::ffi::c_void, output: *const INTERACTION_CONTEXT_OUTPUT);
#[cfg(feature = "Win32_UI_WindowsAndMessaging")]
pub type INTERACTION_CONTEXT_OUTPUT_CALLBACK2 = unsafe extern "system" fn(clientdata: *const ::core::ffi::c_void, output: *const INTERACTION_CONTEXT_OUTPUT2);
pub const INTERACTION_CONTEXT_PROPERTY_MEASUREMENT_UNITS: i32 = 1i32;
pub const INTERACTION_CONTEXT_PROPERTY_INTERACTION_UI_FEEDBACK: i32 = 2i32;
pub const INTERACTION_CONTEXT_PROPERTY_FILTER_POINTERS: i32 = 3i32;
pub const INTERACTION_CONTEXT_PROPERTY_MAX: i32 = -1i32;
pub const INTERACTION_FLAG_NONE: u32 = 0u32;
pub const INTERACTION_FLAG_BEGIN: u32 = 1u32;
pub const INTERACTION_FLAG_END: u32 = 2u32;
pub const INTERACTION_FLAG_CANCEL: u32 = 4u32;
pub const INTERACTION_FLAG_INERTIA: u32 = 8u32;
pub const INTERACTION_FLAG_MAX: u32 = 4294967295u32;
pub const INTERACTION_ID_NONE: i32 = 0i32;
pub const INTERACTION_ID_MANIPULATION: i32 = 1i32;
pub const INTERACTION_ID_TAP: i32 = 2i32;
pub const INTERACTION_ID_SECONDARY_TAP: i32 = 3i32;
pub const INTERACTION_ID_HOLD: i32 = 4i32;
pub const INTERACTION_ID_DRAG: i32 = 5i32;
pub const INTERACTION_ID_CROSS_SLIDE: i32 = 6i32;
pub const INTERACTION_ID_MAX: i32 = -1i32;
pub const INTERACTION_STATE_IDLE: i32 = 0i32;
pub const INTERACTION_STATE_IN_INTERACTION: i32 = 1i32;
pub const INTERACTION_STATE_POSSIBLE_DOUBLE_TAP: i32 = 2i32;
pub const INTERACTION_STATE_MAX: i32 = -1i32;
pub const MANIPULATION_RAILS_STATE_UNDECIDED: i32 = 0i32;
pub const MANIPULATION_RAILS_STATE_FREE: i32 = 1i32;
pub const MANIPULATION_RAILS_STATE_RAILED: i32 = 2i32;
pub const MANIPULATION_RAILS_STATE_MAX: i32 = -1i32;
#[repr(C)]
pub struct MANIPULATION_TRANSFORM {
    pub translationX: f32,
    pub translationY: f32,
    pub scale: f32,
    pub expansion: f32,
    pub rotation: f32,
}
impl ::core::marker::Copy for MANIPULATION_TRANSFORM {}
impl ::core::clone::Clone for MANIPULATION_TRANSFORM {
    fn clone(&self) -> Self {
        *self
    }
}
#[repr(C)]
pub struct MANIPULATION_VELOCITY {
    pub velocityX: f32,
    pub velocityY: f32,
    pub velocityExpansion: f32,
    pub velocityAngular: f32,
}
impl ::core::marker::Copy for MANIPULATION_VELOCITY {}
impl ::core::clone::Clone for MANIPULATION_VELOCITY {
    fn clone(&self) -> Self {
        *self
    }
}
pub const MOUSE_WHEEL_PARAMETER_CHAR_TRANSLATION_X: i32 = 1i32;
pub const MOUSE_WHEEL_PARAMETER_CHAR_TRANSLATION_Y: i32 = 2i32;
pub const MOUSE_WHEEL_PARAMETER_DELTA_SCALE: i32 = 3i32;
pub const MOUSE_WHEEL_PARAMETER_DELTA_ROTATION: i32 = 4i32;
pub const MOUSE_WHEEL_PARAMETER_PAGE_TRANSLATION_X: i32 = 5i32;
pub const MOUSE_WHEEL_PARAMETER_PAGE_TRANSLATION_Y: i32 = 6i32;
pub const MOUSE_WHEEL_PARAMETER_MAX: i32 = -1i32;
pub const TAP_PARAMETER_MIN_CONTACT_COUNT: i32 = 0i32;
pub const TAP_PARAMETER_MAX_CONTACT_COUNT: i32 = 1i32;
pub const TAP_PARAMETER_MAX: i32 = -1i32;
pub const TRANSLATION_PARAMETER_MIN_CONTACT_COUNT: i32 = 0i32;
pub const TRANSLATION_PARAMETER_MAX_CONTACT_COUNT: i32 = 1i32;
pub const TRANSLATION_PARAMETER_MAX: i32 = -1i32;
